--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "firebase": "^8.7.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "ts-node": "^10.0.0"
   },
   "devDependencies": {
     "@types/ejs": "^3.0.7",
