--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "author": "Arthur Developer",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "firebase": "^8.7.0",
-    "typescript": "^4.3.5",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/ejs": "^3.0.7",
